--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Password Generator</h1>
 
         <div class="display-container">
-            <input readonly placeholder="Password" class="display" data-passwordDisplay>
+            <input readonly placeholder="PASSWORD" class="display" data-passwordDisplay>
             <button data-copy>
-                <span data-copyMsg></span>
+                <span data-copyMsg class="tooltip"></span>
                 <i class="fa-regular fa-copy"></i>
             </button>
         </div>
@@ -31,19 +31,19 @@
             <input type="range" min="1" max="20" class="slider" step="1" data-lengthSlider>
 
             <!-- checkboxes -->
-            <div>
+            <div class="check">
                 <input type="checkbox" id="uppercase">
                 <label for="uppercase">Include Uppercase Letters</label>
             </div>
-            <div>
+            <div class="check">
                 <input type="checkbox" id="lowercase">
                 <label for="uppercase">Include Lowercase Letters</label>
             </div>
-            <div>
+            <div class="check">
                 <input type="checkbox" id="numbers">
                 <label for="uppercase">Include Numbers</label>
             </div>
-            <div>
+            <div class="check">
                 <input type="checkbox" id="symbols">
                 <label for="uppercase">Include Symbols</label>
             </div>
